--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -8,21 +8,24 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
-  <body>
-    <div>
-      <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <%= link_to "sign_up", new_user_registration_path, class:"nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "sign_in", new_user_session_path, class:"nav-link" %>
-        </li>
-      </ul>
-    </div>
+  <body class="border-6 mh-1000 bg-black text-white">
     <div>
       <%= render 'layouts/flashes' %>
     </div>
-    <div>
+
+
+    <div class="d-flex justify-content-around mx-auto p-2 border-4">
+      <div>偽Twitter</div>
+      <div>
+        <% if user_signed_in? %>
+          <%= link_to "ログアウト", destroy_user_session_path, class:"btn btn-outline-danger" %>
+        <% else %>
+          <%= link_to "ログイン", new_user_session_path, class:"btn btn-outline-primary" %>
+          <%= link_to "新規登録", new_user_registration_path, class:"btn btn-primary" %>
+        <% end %>
+      </div>
+    </div>
+    <div class="border-4">
       <%= yield %>
     </div>
   </body>
