--- a/app/views/users/registrations/edit.html
+++ b/app/views/users/registrations/edit.html
@@ -5,7 +5,7 @@
 
   <div class="field">
     <%= f.label :name %><br />
-    <%= f.name_field :name, autofocus: true, autocomplete: "name" %>
+    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
   </div>
 
   <div class="field">
@@ -15,12 +15,12 @@
 
   <div class="field">
     <%= f.label :tel %><br />
-    <%= f.tel_field :tel, autofocus: true, autocomplete: "tel" %>
+    <%= f.text_field :tel, autofocus: true, autocomplete: "tel" %>
   </div>
 
   <div class="field">
     <%= f.label :birthday %><br />
-    <%= f.birthday_field :birthday, autofocus: true, autocomplete: "birthday" %>
+    <%= f.text_field :birthday, autofocus: true, autocomplete: "birthday" %>
   </div>
 
   <div class="field">
@@ -38,8 +38,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
+    <%= f.label :avatar %><br />
+    <%= f.file_field :avatar %>
   </div>
 
   <div class="actions">
