--- a/app/views/users/registrations/edit.html.slim
+++ b/app/views/users/registrations/edit.html.slim
@@ -5,20 +5,20 @@ h2
   = render "users/shared/error_messages", resource: resource
   .field
     = f.label :name
-    br
-    = f.name_field :name, autofocus: true, autocomplete: "name"
+  br
+  = f.text_field :name, autofocus: true, autocomplete: "name"
   .field
     = f.label :email
-    br
-    = f.email_field :email, autofocus: true, autocomplete: "email"
+  br
+  = f.email_field :email, autofocus: true, autocomplete: "email"
   .field
     = f.label :tel
-    br
-    = f.tel_field :tel, autofocus: true, autocomplete: "tel"
+  br
+  = f.text_field :tel, autofocus: true, autocomplete: "tel"
   .field
     = f.label :birthday
-    br
-    = f.birthday_field :birthday, autofocus: true, autocomplete: "birthday"
+  br
+  = f.text_field :birthday, autofocus: true, autocomplete: "birthday"
   .field
     = f.label :password
   i
@@ -32,14 +32,12 @@ h2
       |  characters minimum
   .field
     = f.label :password_confirmation
-    br
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .field
-    = f.label :current_password
-  i
-    | (we need your current password to confirm your changes)
   br
-  = f.password_field :current_password, autocomplete: "current-password"
+  = f.password_field :password_confirmation, autocomplete: "new-password"
+  .field
+    = f.label :avatar
+  br
+  = f.file_field :avatar
   .actions
     = f.submit "Update"
 h3
