--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -85,9 +85,34 @@ input[name="tab_menu"] {
   background-color: #000000;
 }
 
+.avatar-profile {
+  border-radius: 50%;
+    width: 100px;
+    height: 100px;
+  object-fit:cover;
+}
 .avatar {
   border-radius: 50%;
     width: 60px;
     height: 60px;
   object-fit:cover;
+}
+
+.flamingo {
+  background-color: #F1692C;
+}
+.carrot {
+  background-color: #ed6d35;
+}
+.orange {
+  background-color: #ffa500;
+}
+.margin-right-1 {
+  margin-right: 10px;
+}
+.border-under {
+  border-bottom: 1px solid black;
+}
+.font-size-text {
+  font-size: 14px;
 }
