--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,6 +30,49 @@
           <div class="border-4 w-100 bg-primary">
             全てのユーザーのツイートが表示される
           </div>
+
+          <% @tweets.each do |tweet| %>
+            <div class="d-flex border-under">
+              <%= image_tag tweet.user.avatar.variant(resize_to_fit: [1000, 1000]), class:"avatar d-flex col-2 margin-right-1" if tweet.user.avatar.attached? %>
+              <div class="col-10">
+                <div class="d-flex flex-column">
+                  <div class="fw-bolder fs-6 text-start"><%= tweet.user.username %></div>
+                  <div class="text-start font-size-text"><%= tweet.content %></div>
+                </div>
+                <div class="d-flex">
+                  <% if tweet.images.attached? %>
+                    <% case tweet.images.size %>
+                    <% when 1 then %>
+                      <% tweet.images.each do |image| %>
+                        <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-100" %>
+                      <% end %>
+                    <% when 2 then %>
+                      <% tweet.images.each do |image| %>
+                        <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-50" %>
+                      <% end %>
+                    <% when 3 then %>
+                      <div class="mx-auto">
+                        <% tweet.images.each do |image| %>
+                          <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
+                        <% end %>
+                      </div>
+                    <% when 4 then %>
+                      <% tweet.images.each do |image| %>
+                        <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
+                      <% end %>
+                    <% end %>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          <% end %>
+          <%= paginate @tweets, theme: 'bootstrap-5' %>
+
+        </div>
+        <div class="tab_contents border-4 p-1 w-100" id="menu02">
+          <div class="border-4 w-100 bg-primary">
+            全てのユーザーのツイートが表示される
+          </div>
           <% @tweets.each do |tweet| %>
             <div class="w-100">
               <div class="d-flex">
@@ -41,70 +84,31 @@
                 <% if tweet.images.attached? %>
                   <% case tweet.images.size %>
                   <% when 1 then %>
-                  <% tweet.images.each do |image| %>
-                    <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-100" %>
-                  <% end %>
+                    <% tweet.images.each do |image| %>
+                      <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-100" %>
+                    <% end %>
                   <% when 2 then %>
-                  <% tweet.images.each do |image| %>
-                    <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-50" %>
-                  <% end %>
+                    <% tweet.images.each do |image| %>
+                      <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-50" %>
+                    <% end %>
                   <% when 3 then %>
-                  <div class="mx-auto">
+                    <div class="mx-auto">
+                      <% tweet.images.each do |image| %>
+                        <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
+                      <% end %>
+                    </div>
+                  <% when 4 then %>
                     <% tweet.images.each do |image| %>
                       <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
                     <% end %>
-                  </div>
-                  <% when 4 then %>
-                  <% tweet.images.each do |image| %>
-                    <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
                   <% end %>
-                <% end %>
               </div>
             <% end %>
-          </div>
-        <% end %>
-        <%= paginate @tweets, theme: 'bootstrap-5' %>
-      </div>
-      <div class="tab_contents border-4 p-1 w-100" id="menu02">
-        <div class="border-4 w-100 bg-primary">
-          全てのユーザーのツイートが表示される
-        </div>
-        <% @tweets.each do |tweet| %>
-          <div class="w-100">
-            <div class="d-flex">
-              <%= image_tag tweet.user.avatar.variant(resize_to_fit: [1000, 1000]), class:"avatar" if tweet.user.avatar.attached? %>
-              <p class="fw-bolder fs-6"><%= tweet.user.username %></p>
-            </div>
-            <div><%= tweet.content %></div>
-            <div class="d-flex">
-              <% if tweet.images.attached? %>
-                <% case tweet.images.size %>
-                <% when 1 then %>
-                <% tweet.images.each do |image| %>
-                  <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-100" %>
-                <% end %>
-                <% when 2 then %>
-                <% tweet.images.each do |image| %>
-                  <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-50" %>
-                <% end %>
-                <% when 3 then %>
-                <div class="mx-auto">
-                  <% tweet.images.each do |image| %>
-                    <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
-                  <% end %>
-                </div>
-                <% when 4 then %>
-                <% tweet.images.each do |image| %>
-                  <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
-                <% end %>
-              <% end %>
             </div>
           <% end %>
+          <%= paginate @tweets, theme: 'bootstrap-5' %>
         </div>
-      <% end %>
-      <%= paginate @tweets, theme: 'bootstrap-5' %>
+      </div>
     </div>
   </div>
-</div>
-</div>
 </div>
