--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container-fluid text-center">
   <div class="row">
     <div class="col-4 d-flex flex-column mb-3 border-4">
       <div class="p-3">ホーム</div>
