--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -120,3 +120,19 @@ input[name="tab_menu"] {
 .container-fluid {
   max-width: 1200px;
 }
+.decoration-none {
+  text-decoration: none;
+}
+.color-white {
+  color: #000000;
+}
+.color-white:hover {
+  color: #000000;
+}
+.color-blue {
+  color: blue;
+}
+.color-gray {
+  color: darkgray;
+  opacity: 0.7;
+}
