--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,12 +1,12 @@
 <div class="container-fluid text-center">
   <div class="row">
     <div class="col-4 d-flex flex-column mb-3 border-4">
-      <div class="p-3"><%= link_to "ホーム", root_path %></div>
+      <div class="p-3"><%= link_to "ホーム", root_path, class:"decoration-none" %></div>
       <div class="p-3">話題を検索</div>
       <div class="p-3">メッセージ</div>
       <div class="p-3">ブックマーク</div>
       <div class="p-3">Twitter Blue</div>
-      <div class="p-3"><%= link_to "プロフィール", home_path(current_user) %></div>
+      <div class="p-3"><%= link_to "プロフィール", home_path(current_user), class:"decoration-none" %></div>
       <div class="p-3">もっと見る</div>
       <div class="p-3"><%= link_to "ツイートする", new_tweet_path, class:"btn btn-primary"  %></div>
     </div>
@@ -36,39 +36,40 @@
           <% @tweets.each do |tweet| %>
             <div class="d-flex border-under">
               <%= image_tag tweet.user.avatar.variant(resize_to_fit: [1000, 1000]), class:"avatar d-flex col-2 margin-right-1" if tweet.user.avatar.attached? %>
-              <div class="col-10">
-                <div class="d-flex flex-column">
-                  <div class="fw-bolder fs-6 text-start"><%= tweet.user.username %></div>
-                  <div class="text-start font-size-text"><%= tweet.content %></div>
-                </div>
-                <div class="d-flex">
-                  <% if tweet.images.attached? %>
-                    <% case tweet.images.size %>
-                    <% when 1 then %>
+              <div>
+                <%= link_to "/tweet/#{tweet.id}", class:"decoration-none color-white" do %>
+                  <div class="d-flex flex-column">
+                    <div class="fw-bolder fs-6 text-start"><%= tweet.user.username %></div>
+                    <div class="text-start font-size-text"><%= tweet.content %></div>
+                  </div>
+                  <div class="d-flex">
+                    <% if tweet.images.attached? %>
+                      <% case tweet.images.size %>
+                      <% when 1 then %>
                       <% tweet.images.each do |image| %>
                         <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-100" %>
                       <% end %>
-                    <% when 2 then %>
+                      <% when 2 then %>
                       <% tweet.images.each do |image| %>
                         <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-50" %>
                       <% end %>
-                    <% when 3 then %>
+                      <% when 3 then %>
                       <div class="mx-auto">
                         <% tweet.images.each do |image| %>
                           <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
                         <% end %>
                       </div>
-                    <% when 4 then %>
+                      <% when 4 then %>
                       <% tweet.images.each do |image| %>
                         <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
                       <% end %>
                     <% end %>
                   <% end %>
                 </div>
-              </div>
+              <% end %>
             </div>
-          <% end %>
-
+          </div>
+        <% end %>
         <%= paginate @tweets, theme: 'bootstrap-5' %>
       </div>
       <div class="tab_contents border-4 p-1 w-100" id="menu02">
