--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,15 @@
 <div class="container-fluid text-center">
   <div class="row">
     <div class="col-4 d-flex flex-column mb-3 border-4">
-      <div class="p-3">ホーム</div>
-      <div class="p-3">話題を検索</div>
-      <div class="p-3">メッセージ</div>
-      <div class="p-3">ブックマーク</div>
-      <div class="p-3">Twitter Blue</div>
-      <div class="p-3"><%= link_to "プロフィール", home_path(current_user), class:"decoration-none" %></div>
-      <div class="p-3">もっと見る</div>
-      <div class="p-3"><%= link_to "ツイートする", new_tweet_path, class:"btn btn-primary"  %></div>
+      <div class="text-start mx-auto">
+        <div class="p-3"><i class="bi bi-house"></i> ホーム</div>
+        <div class="p-3"><i class="bi bi-bell"></i> 通知</div>
+        <div class="p-3"><i class="bi bi-envelope"></i> メッセージ</div>
+        <div class="p-3"><i class="bi bi-bookmark"></i> ブックマーク</div>
+        <div class="p-3"><i class="bi bi-person-square"></i> <%= link_to "プロフィール", home_path(current_user), class:"decoration-none" %></div>
+        <div class="p-3">もっと見る</div>
+        <div class="p-3"><%= link_to "ツイートする", new_tweet_path, class:"btn btn-primary"  %></div>
+      </div>
     </div>
     <div class="col-8 border-4">
       <div class="tab01">
@@ -43,72 +44,72 @@
                     <% if tweet.images.attached? %>
                       <% case tweet.images.size %>
                       <% when 1 then %>
-                      <% tweet.images.each do |image| %>
-                        <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-100" %>
-                      <% end %>
+                        <% tweet.images.each do |image| %>
+                          <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-100" %>
+                        <% end %>
                       <% when 2 then %>
-                      <% tweet.images.each do |image| %>
-                        <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-50" %>
-                      <% end %>
+                        <% tweet.images.each do |image| %>
+                          <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-50" %>
+                        <% end %>
                       <% when 3 then %>
-                      <div class="mx-auto">
+                        <div class="mx-auto">
+                          <% tweet.images.each do |image| %>
+                            <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
+                          <% end %>
+                        </div>
+                      <% when 4 then %>
                         <% tweet.images.each do |image| %>
                           <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
                         <% end %>
-                      </div>
-                      <% when 4 then %>
+                      <% end %>
+                    <% end %>
+                  </div>
+                <% end %>
+              </div>
+            </div>
+          <% end %>
+          <%= paginate @tweets, theme: 'bootstrap-5' %>
+        </div>
+        <div class="tab_contents border-4 p-1 w-100" id="menu02">
+          <div class="border-4 w-100 bg-primary">
+            全てのユーザーのツイートが表示される
+          </div>
+          <% @tweets.each do |tweet| %>
+            <div class="w-100">
+              <div class="d-flex">
+                <%= image_tag tweet.user.avatar.variant(resize_to_fit: [1000, 1000]), class:"avatar" if tweet.user.avatar.attached? %>
+                <p class="fw-bolder fs-6"><%= tweet.user.username %></p>
+              </div>
+              <div><%= tweet.content %></div>
+              <div class="d-flex">
+                <% if tweet.images.attached? %>
+                  <% case tweet.images.size %>
+                  <% when 1 then %>
+                    <% tweet.images.each do |image| %>
+                      <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-100" %>
+                    <% end %>
+                  <% when 2 then %>
+                    <% tweet.images.each do |image| %>
+                      <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-50" %>
+                    <% end %>
+                  <% when 3 then %>
+                    <div class="mx-auto">
                       <% tweet.images.each do |image| %>
                         <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
                       <% end %>
+                    </div>
+                  <% when 4 then %>
+                    <% tweet.images.each do |image| %>
+                      <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
                     <% end %>
                   <% end %>
-                </div>
-              <% end %>
-            </div>
-          </div>
-        <% end %>
-        <%= paginate @tweets, theme: 'bootstrap-5' %>
-      </div>
-      <div class="tab_contents border-4 p-1 w-100" id="menu02">
-        <div class="border-4 w-100 bg-primary">
-          全てのユーザーのツイートが表示される
-        </div>
-        <% @tweets.each do |tweet| %>
-          <div class="w-100">
-            <div class="d-flex">
-              <%= image_tag tweet.user.avatar.variant(resize_to_fit: [1000, 1000]), class:"avatar" if tweet.user.avatar.attached? %>
-              <p class="fw-bolder fs-6"><%= tweet.user.username %></p>
-            </div>
-            <div><%= tweet.content %></div>
-            <div class="d-flex">
-              <% if tweet.images.attached? %>
-                <% case tweet.images.size %>
-                <% when 1 then %>
-                <% tweet.images.each do |image| %>
-                  <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-100" %>
-                <% end %>
-                <% when 2 then %>
-                <% tweet.images.each do |image| %>
-                  <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-50" %>
-                <% end %>
-                <% when 3 then %>
-                <div class="mx-auto">
-                  <% tweet.images.each do |image| %>
-                    <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
-                  <% end %>
-                </div>
-                <% when 4 then %>
-                <% tweet.images.each do |image| %>
-                  <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
-                <% end %>
-              <% end %>
+              </div>
+            <% end %>
             </div>
           <% end %>
+          <%= paginate @tweets, theme: 'bootstrap-5' %>
         </div>
-      <% end %>
-      <%= paginate @tweets, theme: 'bootstrap-5' %>
+      </div>
     </div>
   </div>
-</div>
-</div>
 </div>
