--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
 
     <div class="d-flex justify-content-around mx-auto p-2 border-4">
-      <div>偽Twitter</div>
+      <div><i class="bi bi-twitter"></i> 偽Twitter</div>
       <div>
         <% if user_signed_in? %>
           <%= link_to "ログアウト", destroy_user_session_path, class:"btn btn-outline-danger" %>
