--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,7 +13,8 @@ html
       = render 'layouts/flashes'
     .d-flex.justify-content-around.mx-auto.p-2.border-4
       div
-        | 偽Twitter
+        i.bi.bi-twitter
+        |  偽Twitter
       div
         - if user_signed_in?
           = link_to "ログアウト", destroy_user_session_path, class:"btn btn-outline-danger"
