--- a/app/views/tweets/show.html
+++ b/app/views/tweets/show.html
@@ -11,7 +11,7 @@
       <div class="p-3"><%= link_to "ツイートする", new_tweet_path, class:"btn btn-primary"  %></div>
     </div>
     <div class="col-8 border-4">
-      <div class="border-under mt-3 pb-5">
+      <div class="border-under mt-3 pb-2">
         <div class="d-flex mb-3">
           <%= image_tag @tweet.user.avatar.variant(resize_to_fit: [1000, 1000]), class:"avatar col-2 margin-right-1" if @tweet.user.avatar.attached? %>
           <div class="text-start mt-2">
@@ -44,8 +44,22 @@
           <% end %>
         <% end %>
       </div>
+      <div class="d-flex">
+        <div>返信</div>
+        <div>RT</div>
+        <% unless @tweet.favorites.where(user_id: current_user.id).first %>
+          <%= link_to "/favorite/#{@tweet.id}", data: { turbo_method: :post } do %>
+            <i class="bi bi-heart"></i>
+          <% end %>
+        <% else %>
+          <%= link_to "/favorite/#{@tweet.id}", data: { turbo_method: :post } do %>
+            <i class="bi bi-heart-fill color-pink"></i>
+          <% end %>
+        <% end %>
+        <div class="ps-1"><%= @tweet.favorites.size %></div>
+      </div>
     </div>
-    <%= form_with url: "/reply/#{@tweet.id}", class:"d-flex w-100 mt-3 mb-3"  do |form| %>
+    <%= form_with url: "/reply/#{@tweet.id}", class:"d-flex w-100 mb-3"  do |form| %>
       <%= form.text_area :content, class:"w-75" %>
       <%= form.submit 'コメントする', class:"btn btn-primary w-25" %>
     <% end %>
@@ -68,6 +82,5 @@
     <% end %>
     <%= paginate @replies, theme: 'bootstrap-5' %>
   </div>
-</div>
 </div>
 </div>
