--- a/app/views/tweets/show.html.slim
+++ b/app/views/tweets/show.html.slim
@@ -18,7 +18,7 @@
       .p-3
         = link_to "ツイートする", new_tweet_path, class:"btn btn-primary"
     .col-8.border-4
-      .border-under.mt-3.pb-5
+      .border-under.mt-3.pb-2
         .d-flex.mb-3
           = image_tag @tweet.user.avatar.variant(resize_to_fit: [1000, 1000]), class:"avatar col-2 margin-right-1" if @tweet.user.avatar.attached?
           .text-start.mt-2
@@ -46,7 +46,20 @@
             - when 4 then
               - @tweet.images.each do |image|
                 = image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25"
-      = form_with url: "/reply/#{@tweet.id}", class:"d-flex w-100 mt-3 mb-3"  do |form|
+        .d-flex
+          div
+            | 返信
+          div
+            | RT
+          - unless @tweet.favorites.where(user_id: current_user.id).first
+            = link_to "/favorite/#{@tweet.id}", data: { turbo_method: :post } do
+              i.bi.bi-heart
+          - else
+            = link_to "/favorite/#{@tweet.id}", data: { turbo_method: :post } do
+              i.bi.bi-heart-fill.color-pink
+          .ps-1
+            = @tweet.favorites.size
+      = form_with url: "/reply/#{@tweet.id}", class:"d-flex w-100 mb-3"  do |form|
         = form.text_area :content, class:"w-75"
         = form.submit 'コメントする', class:"btn btn-primary w-25"
       - @replies.each do |reply|
