ルーティングを文字列からpathに変更

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -71,11 +71,11 @@
                 <div>返信</div>
                 <div>RT</div>
                 <% unless tweet.favorites.where(user_id: current_user.id).first %>
-                  <%= link_to "/favorite/#{tweet.id}", data: { turbo_method: :post } do %>
+                  <%= link_to favorites_path(params: { id: tweet.id }), data: { turbo_method: :post } do %>
                     <i class="bi bi-heart"></i>
                   <% end %>
                 <% else %>
-                  <%= link_to "/favorite/#{tweet.id}", data: { turbo_method: :post } do %>
+                  <%= link_to favorites_path(params: { id: tweet.id }), data: { turbo_method: :post } do %>
                     <i class="bi bi-heart-fill color-pink"></i>
                   <% end %>
                 <% end %>
@@ -128,11 +128,11 @@
               <div>返信</div>
               <div>RT</div>
               <% unless favorite.tweet.favorites.where(user_id: current_user.id).first %>
-                <%= link_to "/favorite/#{favorite.tweet.id}", data: { turbo_method: :post } do %>
+                <%= link_to favorites_path(params: { id: favorite.tweet_id}), data: { turbo_method: :post } do %>
                   <i class="bi bi-heart"></i>
                 <% end %>
               <% else %>
-                <%= link_to "/favorite/#{favorite.tweet.id}", data: { turbo_method: :post } do %>
+                <%= link_to favorites_path(params: { id: favorite.tweet_id}), data: { turbo_method: :post } do %>
                   <i class="bi bi-heart-fill color-pink"></i>
                 <% end %>
               <% end %>
