--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -4,7 +4,7 @@
       <div class="p-3"><%= link_to "ホーム", root_path, class:"decoration-none" %></div>
       <div class="p-3">話題を検索</div>
       <div class="p-3">メッセージ</div>
-      <div class="p-3">ブックマーク</div>
+      <div class="p-3"><i class="bi bi-bookmark"></i> <%= link_to "ブックマーク", bookmarks_path %></div>
       <div class="p-3">Twitter Blue</div>
       <div class="p-3"><%= link_to "プロフィール", home_path(current_user), class:"decoration-none" %></div>
       <div class="p-3">もっと見る</div>
