--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -35,51 +35,6 @@
   border: 1px solid #665990;
 }
 
-.tab01 {
-  width: 100%;
-  margin: 0 auto 30px;
-}
-/*タブのスタイル*/
-.tab_menu {
-  width: calc(100%/2);
-  height: 40px;
-  line-height: 40px;
-  font-size: 14px;
-  text-align: center;
-  color: #000;
-  display: block;
-  float: left;
-  text-align: center;
-  font-weight: bold;
-  transition: all 0.2s ease;
-}
-.tab_menu:hover {
-  opacity: 0.75;
-}
-/*ラジオボタンを全て消す*/
-input[name="tab_menu"] {
-  display: none;
-}
-/*タブ切り替えの中身のスタイル*/
-.tab_contents {
-  display: none;
-  padding: 40px;
-  clear: both;
-  overflow: hidden;
-  transition: .5s opacity;
-  box-shadow: 0 0 3px rgba(0,0,0,.2);
-}
-/*選択されているタブを表示*/
-#menu01:checked ~ #menu01,
-#menu02:checked ~ #menu02
-{
-  display: block;
-}
-/*選択されているタブのスタイル*/
-.tab01 input:checked + .tab_menu {
-  border-bottom: 6px solid rgb(2, 80, 196);
-  color: #fff;
-}
 
 .bg-black {
   background-color: #000000;
@@ -87,14 +42,14 @@ input[name="tab_menu"] {
 
 .avatar-profile {
   border-radius: 50%;
-    width: 100px;
-    height: 100px;
+  width: 100px;
+  height: 100px;
   object-fit:cover;
 }
 .avatar {
   border-radius: 50%;
-    width: 60px;
-    height: 60px;
+  width: 60px;
+  height: 60px;
   object-fit:cover;
 }
 
@@ -140,3 +95,55 @@ input[name="tab_menu"] {
   color: #fa2c8b;
 
 }
+
+/* タブに関してのCSS */
+.tab-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px 0;
+}
+.tab-wrap:after {
+  content: '';
+  width: 100%;
+  height: 3px;
+  display: block;
+  order: -1;
+}
+.tab-label {
+  color: White;
+  font-weight: bold;
+  text-shadow: 0 -1px 0 rgba(0,0,0,.2);
+  white-space: nowrap;
+  text-align: center;
+  padding: 10px .5em;
+  order: -1;
+  position: relative;
+  z-index: 1;
+  cursor: 1;
+  flex: 1;
+}
+
+.tab-label:not(:last-of-type) {
+}
+
+.tab-content {
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  opacity: 0;
+}
+/* アクティブなタブ */
+.tab-switch:checked+.tab-label {
+  border-bottom: solid 5px #0250c4;
+}
+.tab-switch:checked+.tab-label+.tab-content {
+  height: auto;
+  overflow: auto;
+  opacity: 1;
+  transition: .5s opacity;
+}
+/* ラジオボタン非表示 */
+.tab-switch {
+  display: none;
+}
+
