--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -24,12 +24,9 @@
         <div class="text-start mb-1">誕生日: <%= @user.birthday %></div>
         <div class="text-start">URL: <%= link_to "#{@user.website}", @user.website  %></div>
       </div>
-      <div class="tab01">
-        <input id="menu01" type="radio" name="tab_menu" checked><label class="tab_menu" for="menu01">ツイート</label>
-        <input id="menu02" type="radio" name="tab_menu"><label class="tab_menu" for="menu02">いいね</label>
-        <input id="menu03" type="radio" name="tab_menu"><label class="tab_menu" for="menu03">リツイート</label>
-        <input id="menu04" type="radio" name="tab_menu"><label class="tab_menu" for="menu04">コメント</label>
-        <div class="tab_contents border-4 p-1 w-100" id="menu01">
+      <div class="tab-wrap">
+        <input id="TAB-01" type="radio" name="TAB" class="tab-switch" checked="checked" /><label class="tab-label" for="TAB-01">ツイート</label>
+        <div class="tab-content">
           <div class="border-4 w-100 bg-primary">
             自身のツイートが表示される
           </div>
@@ -69,7 +66,17 @@
               <% end %>
               <div class="d-flex">
                 <div>返信</div>
+                <% unless tweet.retweets.find_by(user_id: current_user.id) %>
+                  <%= link_to retweets_path(params: { id: tweet.id }), data: { turbo_method: :post } do %>
+                    <i class="bi bi-repeat"></i>
+                  <% end %>
+                <% else %>
+                  <%= link_to retweets_path(params: { id: tweet.id }), data: { turbo_method: :post } do %>
+                    <i class="bi bi-repeat-1"></i>
+                  <% end %>
+                <% end %>
                 <div>RT</div>
+                <div class="ps-1"><%= tweet.retweets.size %></div>
                 <% unless tweet.favorites.where(user_id: current_user.id).first %>
                   <%= link_to favorites_path(params: { id: tweet.id }), data: { turbo_method: :post } do %>
                     <i class="bi bi-heart"></i>
@@ -86,7 +93,8 @@
         <% end %>
         <%= paginate @tweets, theme: 'bootstrap-5' %>
       </div>
-      <div class="tab_contents border-4 p-1 w-100" id="menu02">
+      <input id="TAB-02" type="radio" name="TAB" class="tab-switch" /><label class="tab-label" for="TAB-02">いいね</label>
+      <div class="tab-content">
         <div class="border-4 w-100 bg-primary">
           いいねしたツイート一覧が表示される
         </div>
@@ -126,7 +134,17 @@
             <% end %>
             <div class="d-flex">
               <div>返信</div>
+              <% unless favorite.tweet.retweets.find_by(user_id: current_user.id) %>
+                <%= link_to retweets_path(params: { id: favorite.tweet.id }), data: { turbo_method: :post } do %>
+                  <i class="bi bi-repeat"></i>
+                <% end %>
+              <% else %>
+                <%= link_to retweets_path(params: { id: favorite.tweet.id }), data: { turbo_method: :post } do %>
+                  <i class="bi bi-repeat-1"></i>
+                <% end %>
+              <% end %>
               <div>RT</div>
+              <div class="ps-1"><%= favorite.tweet.retweets.size %></div>
               <% unless favorite.tweet.favorites.where(user_id: current_user.id).first %>
                 <%= link_to favorites_path(params: { id: favorite.tweet_id}), data: { turbo_method: :post } do %>
                   <i class="bi bi-heart"></i>
@@ -142,6 +160,74 @@
         </div>
       <% end %>
     </div>
+    <input id="TAB-03" type="radio" name="TAB" class="tab-switch" /><label class="tab-label" for="TAB-03">リツイート</label>
+    <div class="tab-content">
+      <div class="border-4 w-100 bg-primary">
+        リツイートした投稿が表示される
+      </div>
+      <% @retweets.each do |retweet| %>
+        <div class="d-flex border-under">
+          <%= image_tag retweet.tweet.user.avatar.variant(resize_to_fit: [1000, 1000]), class:"avatar d-flex col-2 margin-right-1" if retweet.tweet.user.avatar.attached? %>
+          <div>
+            <%= link_to "/tweet/#{retweet.tweet.id}", class:"decoration-none color-white" do %>
+              <div class="d-flex flex-column">
+                <div class="fw-bolder fs-6 text-start"><%= retweet.tweet.user.username %></div>
+                <div class="text-start font-size-text"><%= retweet.tweet.content %></div>
+              </div>
+              <div class="d-flex">
+                <% if retweet.tweet.images.attached? %>
+                  <% case retweet.tweet.images.size %>
+                  <% when 1 then %>
+                  <% retweet.tweet.images.each do |image| %>
+                    <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-100" %>
+                  <% end %>
+                  <% when 2 then %>
+                  <% retweet.tweet.images.each do |image| %>
+                    <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-50" %>
+                  <% end %>
+                  <% when 3 then %>
+                  <div class="mx-auto">
+                    <% retweet.tweet.images.each do |image| %>
+                      <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
+                    <% end %>
+                  </div>
+                  <% when 4 then %>
+                  <% retweet.tweet.images.each do |image| %>
+                    <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
+                  <% end %>
+                <% end %>
+              <% end %>
+            </div>
+          <% end %>
+          <div class="d-flex">
+            <div>返信</div>
+            <% unless retweet.tweet.retweets.find_by(user_id: current_user.id) %>
+              <%= link_to retweets_path(params: { id: retweet.tweet.id }), data: { turbo_method: :post } do %>
+                <i class="bi bi-repeat"></i>
+              <% end %>
+            <% else %>
+              <%= link_to retweets_path(params: { id: retweet.tweet.id }), data: { turbo_method: :post } do %>
+                <i class="bi bi-repeat-1"></i>
+              <% end %>
+            <% end %>
+            <div>RT</div>
+            <div class="ps-1"><%= retweet.tweet.retweets.size %></div>
+            <% unless retweet.tweet.favorites.where(user_id: current_user.id).first %>
+              <%= link_to favorites_path(params: { id: retweet.tweet.id }), data: { turbo_method: :post } do %>
+                <i class="bi bi-heart"></i>
+              <% end %>
+            <% else %>
+              <%= link_to favorites_path(params: { id: retweet.tweet.id }), data: { turbo_method: :post } do %>
+                <i class="bi bi-heart-fill color-pink"></i>
+              <% end %>
+            <% end %>
+            <div class="ps-1"><%= retweet.tweet.favorites.size %></div>
+          </div>
+        </div>
+      </div>
+    <% end %>
   </div>
+</div>
+</div>
 </div>
 </div>
