--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,15 +1,6 @@
 <div class="container-fluid text-center">
   <div class="row">
-    <div class="col-4 d-flex flex-column mb-3 border-4">
-      <div class="p-3"><%= link_to "ホーム", root_path, class:"decoration-none" %></div>
-      <div class="p-3">話題を検索</div>
-      <div class="p-3">メッセージ</div>
-      <div class="p-3"><i class="bi bi-bookmark"></i> <%= link_to "ブックマーク", bookmarks_path %></div>
-      <div class="p-3">Twitter Blue</div>
-      <div class="p-3"><%= link_to "プロフィール", home_path(current_user), class:"decoration-none" %></div>
-      <div class="p-3">もっと見る</div>
-      <div class="p-3"><%= link_to "ツイートする", new_tweet_path, class:"btn btn-primary"  %></div>
-    </div>
+    <%= render partial: 'layouts/sidemenu' %>
     <div class="col-8 border-4">
       <div class="mb-3">
         <div class="w-100 mb-4"><%= image_tag @user.header_image.variant(resize_to_fit: [1500, 300]), class:"w-100" if @user.header_image.attached? %></div>
