--- a/app/views/layouts/_sidemenu.html.erb
+++ b/app/views/layouts/_sidemenu.html.erb
@@ -2,7 +2,7 @@
   <div class="text-start mx-auto">
     <div class="p-3"><i class="bi bi-house"></i> <%= link_to "ホーム", root_path %></div>
     <div class="p-3"><i class="bi bi-bell"></i> 通知</div>
-    <div class="p-3"><i class="bi bi-envelope"></i> <%= link_to "メッセージ", "/messages" %></div>
+    <div class="p-3"><i class="bi bi-envelope"></i> <%= link_to "メッセージ", messages_path %></div>
     <div class="p-3"><i class="bi bi-bookmark"></i> <%= link_to "ブックマーク", bookmarks_path %></div>
     <div class="p-3"><i class="bi bi-person-square"></i> <%= link_to "プロフィール", home_path(current_user), class:"decoration-none" %></div>
     <div class="p-3">もっと見る</div>
