--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,6 @@
 <div class="container-fluid text-center">
   <div class="row">
-    <div class="col-4 d-flex flex-column mb-3 border-4">
-      <div class="text-start mx-auto">
-        <div class="p-3"><i class="bi bi-house"></i> ホーム</div>
-        <div class="p-3"><i class="bi bi-bell"></i> 通知</div>
-        <div class="p-3"><i class="bi bi-envelope"></i> メッセージ</div>
-        <div class="p-3"><i class="bi bi-bookmark"></i> <%= link_to "ブックマーク", bookmarks_path %></div>
-        <div class="p-3"><i class="bi bi-person-square"></i> <%= link_to "プロフィール", home_path(current_user), class:"decoration-none" %></div>
-        <div class="p-3">もっと見る</div>
-        <div class="p-3"><%= link_to "ツイートする", new_tweet_path, class:"btn btn-primary"  %></div>
-      </div>
-    </div>
+    <%= render partial: 'layouts/sidemenu' %>
     <div class="col-8 border-4">
       <div class="tab-wrap">
         <input id="TAB-01" type="radio" name="TAB" class="tab-switch" checked="checked" /><label class="tab-label" for="TAB-01">全ツイート</label>
@@ -66,6 +56,13 @@
                   </div>
                 <% end %>
                 <div class="d-flex">
+                  <div>
+                    <% unless tweet.user == current_user %>
+                      <%= link_to message_path(tweet.user.id) do %>
+                        <i class="bi bi-envelope"></i>
+                      <% end %>
+                    <% end %>
+                  </div>
                   <div>返信</div>
                   <% unless tweet.retweets.find_by(user_id: current_user.id) %>
                     <%= link_to retweets_path(params: { id: tweet.id }), data: { turbo_method: :post } do %>
@@ -159,7 +156,4 @@
       </div>
     </div>
   </div>
-</div>
-</div>
-</div>
 </div>
