--- a/app/views/layouts/_form.html.erb
+++ b/app/views/layouts/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with url: "/tweet/#{current_user.id}", class:"border-4"  do |form| %>
-  <%= form.text_area :content, class:"p-3 w-100 bg-black" %>
+  <%= form.text_area :content, class:"p-3 w-100 input-color bg-black" %>
   <div class="border-4">
     <%= form.label :images, class: "btn btn-secondary" do %>
       画像を選択
