サイトの見た目を修正

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,11 @@
-<div class="container-fluid text-center">
+<div class="container-fluid text-center white">
   <div class="row">
     <%= render partial: 'layouts/sidemenu' %>
     <div class="col-8 border-4">
       <div class="tab-wrap">
         <input id="TAB-01" type="radio" name="TAB" class="tab-switch" checked="checked" /><label class="tab-label" for="TAB-01">全ツイート</label>
         <div class="tab-content">
-          <div class="border-5">
+          <div class="border-4">
             <%= render partial: 'layouts/form' %>
           </div>
           <div class="tab_contents border-4 p-1 w-100" id="menu01">
