--- a/app/views/layouts/_form.html.erb
+++ b/app/views/layouts/_form.html.erb
@@ -3,7 +3,7 @@
   <div class="border-4">
     <%= form.label :images, class: "btn btn-secondary" do %>
       画像を選択
-      <%= form.file_field :images, :multiple => true, class:"d-none" %>
+      <%= form.file_field :images, :multiple => true, class:"d-none white" %>
     <% end %>
     <%= form.submit 'ツイートする', class:"btn btn-primary" %>
   </div>
