--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid text-center">
-  <div class="row">
+  <div class="row white">
     <%= render partial: 'layouts/sidemenu' %>
     <div class="col-8 border-4">
       <%= render partial: 'layouts/message' %>
