--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,5 +1,5 @@
-<h2 class="text-center mt-5 mb-5">アカウント情報を編集</h2>
-<div class="container">
+<h2 class="text-center mt-5 mb-5 white">アカウント情報を編集</h2>
+<div class="container white">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= render "users/shared/error_messages", resource: resource %>
     <div class="form-group col-md-6 mx-auto mb-4">
