--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,49 +1,49 @@
-<h2 class="text-center">アカウントを作成</h2>
+<h2 class="text-center white">アカウントを作成</h2>
 <br />
-<div class="container">
+<div class="container white">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :post }, data: { turbo: false }) do |f| %>
     <%= render "users/shared/error_messages", resource: resource %>
     <div class="form-group col-md-6 mx-auto">
       <%= f.label :userid %><br />
       <%= f.text_field :userid, class:"form-control", autofocus: true, autocomplete: "userid" %>
     </div>
-  </br />
-  <div class="form-group col-md-6 mx-auto">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, class:"form-control", autofocus: true, autocomplete: "username" %>
-  </div>
-</br />
-<div class="form-group col-md-6 mx-auto">
-  <%= f.label :email %><br />
-  <%= f.email_field :email, class:"form-control", autofocus: true, autocomplete: "email" %>
-</div>
-<br />
-<div class="form-group col-md-6 mx-auto">
-  <%= f.label "tel(例: 08012341234)" %><br />
-  <%= f.telephone_field :tel, class:"form-control", autofocus: true, autocomplete: "tel" %>
-</div>
-<br />
-<div class="form-group col-md-6 mx-auto">
-  <%= f.label "生年月日(例:2000年1月1日→ 20000101)" %><br />
-  <%= f.text_field :birthday, class:"form-control", autofocus: true, autocomplete: "birthday" %>
-</div>
-<br />
-<div class="form-group col-md-6 mx-auto">
-  <%= f.label :password %><br />
-  <%= f.password_field :password, class:"form-control", autocomplete: "new-password" %>
-  <% if @minimum_password_length %>
+      </br />
+      <div class="form-group col-md-6 mx-auto">
+        <%= f.label :username %><br />
+        <%= f.text_field :username, class:"form-control", autofocus: true, autocomplete: "username" %>
+      </div>
+      <br />
+      <div class="form-group col-md-6 mx-auto">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, class:"form-control", autofocus: true, autocomplete: "email" %>
+      </div>
+      <br />
+      <div class="form-group col-md-6 mx-auto">
+        <%= f.label :tel %><br />
+        <%= f.telephone_field :tel, class:"form-control", autofocus: true, autocomplete: "tel", placeholder: "(例: 08012341234)" %>
+      </div>
+      <br />
+      <div class="form-group col-md-6 mx-auto">
+        <%= f.label :birthday  %><br />
+        <%= f.text_field :birthday, class:"form-control", autofocus: true, autocomplete: "birthday", placeholder: "生年月日(例:2000年1月1日→ 20000101)" %>
+      </div>
+      <br />
+      <div class="form-group col-md-6 mx-auto">
+        <%= f.label :password %><br />
+        <%= f.password_field :password, class:"form-control", autocomplete: "new-password" %>
+        <% if @minimum_password_length %>
+          <br />
+          <em><%= @minimum_password_length %> characters minimum</em>
+        <% end %>
+      </div>
+      <div class="form-group col-md-6 mx-auto">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, class:"form-control", autocomplete: "new-password" %>
+      </div>
+      <br />
+      <div class="actions col-md-6 mx-auto">
+        <%= f.submit "SignUp", class:"btn btn-primary" %>
+      </div>
+    <% end %>
     <br />
-    <em><%= @minimum_password_length %> characters minimum</em>
-  <% end %>
-</div>
-<div class="form-group col-md-6 mx-auto">
-  <%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation, class:"form-control", autocomplete: "new-password" %>
-</div>
-<br />
-<div class="actions col-md-6 mx-auto">
-  <%= f.submit "SignUp", class:"btn btn-primary" %>
-</div>
-<br />
-<% end %>
 </div>
